@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005, 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2005, 2021, Oracle and/or its affiliates. All rights reserved.
  * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  *
  *
@@ -25,14 +25,17 @@
 
 package com.sun.net.httpserver.spi;
 
+import com.sun.net.httpserver.HttpServer;
+import com.sun.net.httpserver.HttpsServer;
+
 import java.io.IOException;
-import java.net.*;
+import java.lang.reflect.InvocationTargetException;
+import java.net.InetSocketAddress;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
 import java.util.Iterator;
-import java.util.ServiceLoader;
 import java.util.ServiceConfigurationError;
-import com.sun.net.httpserver.*;
+import java.util.ServiceLoader;
 
 /**
  * Service provider class for HttpServer.
@@ -50,6 +53,8 @@ public abstract class HttpServerProvider {
      *
      * @param  backlog
      *         the socket backlog. A value of {@code zero} means the systems default
+     * @throws IOException if an I/O error occurs
+     * @return An instance of HttpServer
      */
     public abstract HttpServer createHttpServer(InetSocketAddress addr,
                                                 int backlog)
@@ -63,6 +68,8 @@ public abstract class HttpServerProvider {
      *
      * @param  backlog
      *         the socket backlog. A value of {@code zero} means the systems default
+     * @throws IOException if an I/O error occurs
+     * @return An instance of HttpServer
      */
     public abstract HttpsServer createHttpsServer(InetSocketAddress addr,
                                                   int backlog)
@@ -79,6 +86,7 @@ public abstract class HttpServerProvider {
      *          {@link RuntimePermission}{@code ("httpServerProvider")}
      */
     protected HttpServerProvider() {
+        @SuppressWarnings("removal")
         SecurityManager sm = System.getSecurityManager();
         if (sm != null)
             sm.checkPermission(new RuntimePermission("httpServerProvider"));
@@ -89,12 +97,17 @@ public abstract class HttpServerProvider {
         if (cn == null)
             return false;
         try {
-            @SuppressWarnings("deprecation")
-            Object o = Class.forName(cn, true,
-                                     ClassLoader.getSystemClassLoader()).newInstance();
-            provider = (HttpServerProvider)o;
-            return true;
-        } catch (ClassNotFoundException |
+            var cls = Class.forName(cn, false, ClassLoader.getSystemClassLoader());
+            if (HttpServerProvider.class.isAssignableFrom(cls)) {
+                provider = (HttpServerProvider) cls.getDeclaredConstructor().newInstance();
+                return true;
+            } else {
+                throw new ServiceConfigurationError("not assignable to HttpServerProvider: "
+                        + cls.getName());
+            }
+        } catch (InvocationTargetException |
+                 NoSuchMethodException |
+                 ClassNotFoundException |
                  IllegalAccessException |
                  InstantiationException |
                  SecurityException x) {
@@ -133,8 +146,9 @@ public abstract class HttpServerProvider {
      * <ol>
      *
      *   <li><p> If the system property
-     *   {@code com.sun.net.httpserver.HttpServerProvider} is defined then it
-     *   is taken to be the fully-qualified name of a concrete provider class.
+     *   {@systemProperty com.sun.net.httpserver.HttpServerProvider}
+     *   is defined then it is taken to be the fully-qualified name
+     *   of a concrete provider class.
      *   The class is loaded and instantiated; if this process fails then an
      *   unspecified unchecked error or exception is thrown.  </p></li>
      *
@@ -158,6 +172,7 @@ public abstract class HttpServerProvider {
      *
      * @return  The system-wide default HttpServerProvider
      */
+    @SuppressWarnings("removal")
     public static HttpServerProvider provider () {
         synchronized (lock) {
             if (provider != null)
