@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2020, Oracle and/or its affiliates. All rights reserved.
  * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  *
  *
@@ -27,13 +27,21 @@ package jdk.security.jarsigner;
 
 import com.sun.jarsigner.ContentSigner;
 import com.sun.jarsigner.ContentSignerParameters;
+import jdk.internal.access.JavaUtilZipFileAccess;
+import jdk.internal.access.SharedSecrets;
+import sun.security.pkcs.PKCS7;
+import sun.security.pkcs.PKCS9Attribute;
+import sun.security.pkcs.PKCS9Attributes;
+import sun.security.timestamp.HttpTimestamper;
 import sun.security.tools.PathList;
-import sun.security.tools.jarsigner.TimestampedSigner;
+import sun.security.util.Event;
 import sun.security.util.ManifestDigester;
 import sun.security.util.SignatureFileVerifier;
+import sun.security.util.SignatureUtil;
 import sun.security.x509.AlgorithmId;
 
 import java.io.*;
+import java.lang.reflect.InvocationTargetException;
 import java.net.SocketTimeoutException;
 import java.net.URI;
 import java.net.URL;
@@ -43,8 +51,10 @@ import java.security.cert.CertPath;
 import java.security.cert.Certificate;
 import java.security.cert.CertificateException;
 import java.security.cert.X509Certificate;
+import java.security.spec.InvalidParameterSpecException;
 import java.util.*;
 import java.util.function.BiConsumer;
+import java.util.function.Function;
 import java.util.jar.Attributes;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
@@ -81,6 +91,8 @@ import java.util.zip.ZipOutputStream;
  */
 public final class JarSigner {
 
+    static final JavaUtilZipFileAccess JUZFA = SharedSecrets.getJavaUtilZipFileAccess();
+
     /**
      * A mutable builder class that can create an immutable {@code JarSigner}
      * from various signing-related parameters.
@@ -107,8 +119,8 @@ public final class JarSigner {
         // Implementation-specific properties:
         String tSAPolicyID;
         String tSADigestAlg;
-        boolean signManifest = true;
-        boolean externalSF = true;
+        boolean sectionsonly = false;
+        boolean internalsf = false;
         String altSignerPath;
         String altSigner;
 
@@ -230,8 +242,7 @@ public final class JarSigner {
                 throws NoSuchAlgorithmException {
             // Check availability
             Signature.getInstance(Objects.requireNonNull(algorithm));
-            AlgorithmId.checkKeyAndSigAlgMatch(
-                    privateKey.getAlgorithm(), algorithm);
+            SignatureUtil.checkKeyAndSigAlgMatch(privateKey, algorithm);
             this.sigalg = algorithm;
             this.sigProvider = null;
             return this;
@@ -261,8 +272,7 @@ public final class JarSigner {
             Signature.getInstance(
                     Objects.requireNonNull(algorithm),
                     Objects.requireNonNull(provider));
-            AlgorithmId.checkKeyAndSigAlgMatch(
-                    privateKey.getAlgorithm(), algorithm);
+            SignatureUtil.checkKeyAndSigAlgMatch(privateKey, algorithm);
             this.sigalg = algorithm;
             this.sigProvider = provider;
             return this;
@@ -374,30 +384,10 @@ public final class JarSigner {
                     this.tSAPolicyID = value;
                     break;
                 case "internalsf":
-                    switch (value) {
-                        case "true":
-                            externalSF = false;
-                            break;
-                        case "false":
-                            externalSF = true;
-                            break;
-                        default:
-                            throw new IllegalArgumentException(
-                                "Invalid internalsf value");
-                    }
+                    this.internalsf = parseBoolean("interalsf", value);
                     break;
                 case "sectionsonly":
-                    switch (value) {
-                        case "true":
-                            signManifest = false;
-                            break;
-                        case "false":
-                            signManifest = true;
-                            break;
-                        default:
-                            throw new IllegalArgumentException(
-                                "Invalid signManifest value");
-                    }
+                    this.sectionsonly = parseBoolean("sectionsonly", value);
                     break;
                 case "altsignerpath":
                     altSignerPath = value;
@@ -410,6 +400,18 @@ public final class JarSigner {
                             "Unsupported key " + key);
             }
             return this;
+        }
+
+        private static boolean parseBoolean(String name, String value) {
+            switch (value) {
+                case "true":
+                    return true;
+                case "false":
+                    return false;
+                default:
+                    throw new IllegalArgumentException(
+                            "Invalid " + name + " value");
+            }
         }
 
         /**
@@ -447,7 +449,9 @@ public final class JarSigner {
          *      will throw an {@link IllegalArgumentException}.
          */
         public static String getDefaultSignatureAlgorithm(PrivateKey key) {
-            return AlgorithmId.getDefaultSigAlgForKey(Objects.requireNonNull(key));
+            // Attention: sync the spec with SignatureUtil::ecStrength and
+            // SignatureUtil::ifcFfcStrength.
+            return SignatureUtil.getDefaultSigAlgForKey(Objects.requireNonNull(key));
         }
 
         /**
@@ -495,10 +499,14 @@ public final class JarSigner {
     // Implementation-specific properties:
     private final String tSAPolicyID;
     private final String tSADigestAlg;
-    private final boolean signManifest; // "sign" the whole manifest
-    private final boolean externalSF; // leave the .SF out of the PKCS7 block
+    private final boolean sectionsonly; // do not "sign" the whole manifest
+    private final boolean internalsf; // include the .SF inside the PKCS7 block
+
+    @Deprecated(since="16", forRemoval=true)
     private final String altSignerPath;
+    @Deprecated(since="16", forRemoval=true)
     private final String altSigner;
+    private boolean extraAttrsDetected;
 
     private JarSigner(JarSigner.Builder builder) {
 
@@ -538,10 +546,17 @@ public final class JarSigner {
             this.tSADigestAlg = Builder.getDefaultDigestAlgorithm();
         }
         this.tSAPolicyID = builder.tSAPolicyID;
-        this.signManifest = builder.signManifest;
-        this.externalSF = builder.externalSF;
+        this.sectionsonly = builder.sectionsonly;
+        this.internalsf = builder.internalsf;
         this.altSigner = builder.altSigner;
         this.altSignerPath = builder.altSignerPath;
+
+        // altSigner cannot support modern algorithms like RSASSA-PSS and EdDSA
+        if (altSigner != null
+                && !sigalg.toUpperCase(Locale.ENGLISH).contains("WITH")) {
+            throw new IllegalArgumentException(
+                    "Customized ContentSigner is not supported for " + sigalg);
+        }
     }
 
     /**
@@ -567,7 +582,8 @@ public final class JarSigner {
             throw new JarSignerException("Error applying timestamp", e);
         } catch (IOException ioe) {
             throw new JarSignerException("I/O error", ioe);
-        } catch (NoSuchAlgorithmException | InvalidKeyException e) {
+        } catch (NoSuchAlgorithmException | InvalidKeyException
+                | InvalidParameterSpecException e) {
             throw new JarSignerException("Error in signer materials", e);
         } catch (SignatureException se) {
             throw new JarSignerException("Error creating signature", se);
@@ -638,9 +654,9 @@ public final class JarSigner {
             case "tsapolicyid":
                 return tSAPolicyID;
             case "internalsf":
-                return Boolean.toString(!externalSF);
+                return Boolean.toString(internalsf);
             case "sectionsonly":
-                return Boolean.toString(!signManifest);
+                return Boolean.toString(sectionsonly);
             case "altsignerpath":
                 return altSignerPath;
             case "altsigner":
@@ -653,7 +669,7 @@ public final class JarSigner {
 
     private void sign0(ZipFile zipFile, OutputStream os)
             throws IOException, CertificateException, NoSuchAlgorithmException,
-            SignatureException, InvalidKeyException {
+            SignatureException, InvalidKeyException, InvalidParameterSpecException {
         MessageDigest[] digests;
         try {
             digests = new MessageDigest[digestalg.length];
@@ -671,26 +687,18 @@ public final class JarSigner {
             throw new AssertionError(asae);
         }
 
-        PrintStream ps = new PrintStream(os);
-        ZipOutputStream zos = new ZipOutputStream(ps);
+        ZipOutputStream zos = new ZipOutputStream(os);
 
         Manifest manifest = new Manifest();
-        Map<String, Attributes> mfEntries = manifest.getEntries();
-
-        // The Attributes of manifest before updating
-        Attributes oldAttr = null;
-
-        boolean mfModified = false;
-        boolean mfCreated = false;
         byte[] mfRawBytes = null;
 
         // Check if manifest exists
-        ZipEntry mfFile;
-        if ((mfFile = getManifestFile(zipFile)) != null) {
+        ZipEntry mfFile = getManifestFile(zipFile);
+        boolean mfCreated = mfFile == null;
+        if (!mfCreated) {
             // Manifest exists. Read its raw bytes.
             mfRawBytes = zipFile.getInputStream(mfFile).readAllBytes();
             manifest.read(new ByteArrayInputStream(mfRawBytes));
-            oldAttr = (Attributes) (manifest.getMainAttributes().clone());
         } else {
             // Create new manifest
             Attributes mattr = manifest.getMainAttributes();
@@ -701,7 +709,6 @@ public final class JarSigner {
             mattr.putValue("Created-By", jdkVersion + " (" + javaVendor
                     + ")");
             mfFile = new ZipEntry(JarFile.MANIFEST_NAME);
-            mfCreated = true;
         }
 
         /*
@@ -728,8 +735,12 @@ public final class JarSigner {
                 // out first
                 mfFiles.addElement(ze);
 
-                if (SignatureFileVerifier.isBlockOrSF(
-                        ze.getName().toUpperCase(Locale.ENGLISH))) {
+                String zeNameUp = ze.getName().toUpperCase(Locale.ENGLISH);
+                if (SignatureFileVerifier.isBlockOrSF(zeNameUp)
+                    // no need to preserve binary manifest portions
+                    // if the only existing signature will be replaced
+                        && !zeNameUp.startsWith(SignatureFile
+                            .getBaseSignatureFilesName(signerName))) {
                     wasSigned = true;
                 }
 
@@ -742,55 +753,75 @@ public final class JarSigner {
             if (manifest.getAttributes(ze.getName()) != null) {
                 // jar entry is contained in manifest, check and
                 // possibly update its digest attributes
-                if (updateDigests(ze, zipFile, digests,
-                        manifest)) {
-                    mfModified = true;
-                }
+                updateDigests(ze, zipFile, digests, manifest);
             } else if (!ze.isDirectory()) {
                 // Add entry to manifest
                 Attributes attrs = getDigestAttributes(ze, zipFile, digests);
-                mfEntries.put(ze.getName(), attrs);
-                mfModified = true;
+                manifest.getEntries().put(ze.getName(), attrs);
             }
         }
 
-        // Recalculate the manifest raw bytes if necessary
-        if (mfModified) {
-            ByteArrayOutputStream baos = new ByteArrayOutputStream();
+        /*
+         * Note:
+         *
+         * The Attributes object is based on HashMap and can handle
+         * continuation lines. Therefore, even if the contents are not changed
+         * (in a Map view), the bytes that it write() may be different from
+         * the original bytes that it read() from. Since the signature is
+         * based on raw bytes, we must retain the exact bytes.
+         */
+        boolean mfModified;
+        ByteArrayOutputStream baos = new ByteArrayOutputStream();
+        if (mfCreated || !wasSigned) {
+            mfModified = true;
             manifest.write(baos);
-            if (wasSigned) {
-                byte[] newBytes = baos.toByteArray();
-                if (mfRawBytes != null
-                        && oldAttr.equals(manifest.getMainAttributes())) {
+            mfRawBytes = baos.toByteArray();
+        } else {
 
-                    /*
-                     * Note:
-                     *
-                     * The Attributes object is based on HashMap and can handle
-                     * continuation columns. Therefore, even if the contents are
-                     * not changed (in a Map view), the bytes that it write()
-                     * may be different from the original bytes that it read()
-                     * from. Since the signature on the main attributes is based
-                     * on raw bytes, we must retain the exact bytes.
-                     */
+            // the manifest before updating
+            Manifest oldManifest = new Manifest(
+                    new ByteArrayInputStream(mfRawBytes));
+            mfModified = !oldManifest.equals(manifest);
+            if (!mfModified) {
+                // leave whole manifest (mfRawBytes) unmodified
+            } else {
+                // reproduce the manifest raw bytes for unmodified sections
+                manifest.write(baos);
+                byte[] mfNewRawBytes = baos.toByteArray();
+                baos.reset();
 
-                    int newPos = findHeaderEnd(newBytes);
-                    int oldPos = findHeaderEnd(mfRawBytes);
+                ManifestDigester oldMd = new ManifestDigester(mfRawBytes);
+                ManifestDigester newMd = new ManifestDigester(mfNewRawBytes);
 
-                    if (newPos == oldPos) {
-                        System.arraycopy(mfRawBytes, 0, newBytes, 0, oldPos);
+                ManifestDigester.Entry oldEntry = oldMd.getMainAttsEntry();
+
+                // main attributes
+                if (oldEntry != null
+                        && manifest.getMainAttributes().equals(
+                                oldManifest.getMainAttributes())
+                        && (manifest.getEntries().isEmpty() ||
+                                oldEntry.isProperlyDelimited())) {
+                    oldEntry.reproduceRaw(baos);
+                } else {
+                    if (newMd.getMainAttsEntry() == null) {
+                        throw new SignatureException("Error getting new main attribute entry");
+                    }
+                    newMd.getMainAttsEntry().reproduceRaw(baos);
+                }
+
+                // individual sections
+                for (Map.Entry<String,Attributes> entry :
+                        manifest.getEntries().entrySet()) {
+                    String sectionName = entry.getKey();
+                    Attributes entryAtts = entry.getValue();
+                    if (entryAtts.equals(oldManifest.getAttributes(sectionName))
+                            && oldMd.get(sectionName).isProperlyDelimited()) {
+                        oldMd.get(sectionName).reproduceRaw(baos);
                     } else {
-                        // cat oldHead newTail > newBytes
-                        byte[] lastBytes = new byte[oldPos +
-                                newBytes.length - newPos];
-                        System.arraycopy(mfRawBytes, 0, lastBytes, 0, oldPos);
-                        System.arraycopy(newBytes, newPos, lastBytes, oldPos,
-                                newBytes.length - newPos);
-                        newBytes = lastBytes;
+                        newMd.get(sectionName).reproduceRaw(baos);
                     }
                 }
-                mfRawBytes = newBytes;
-            } else {
+
                 mfRawBytes = baos.toByteArray();
             }
         }
@@ -801,52 +832,66 @@ public final class JarSigner {
             mfFile = new ZipEntry(JarFile.MANIFEST_NAME);
         }
         if (handler != null) {
-            if (mfCreated) {
+            if (mfCreated || !mfModified) {
                 handler.accept("adding", mfFile.getName());
-            } else if (mfModified) {
+            } else {
                 handler.accept("updating", mfFile.getName());
             }
         }
-
         zos.putNextEntry(mfFile);
         zos.write(mfRawBytes);
 
         // Calculate SignatureFile (".SF") and SignatureBlockFile
         ManifestDigester manDig = new ManifestDigester(mfRawBytes);
         SignatureFile sf = new SignatureFile(digests, manifest, manDig,
-                signerName, signManifest);
+                signerName, sectionsonly);
 
         byte[] block;
 
-        Signature signer;
-        if (sigProvider == null ) {
-            signer = Signature.getInstance(sigalg);
-        } else {
-            signer = Signature.getInstance(sigalg, sigProvider);
-        }
-        signer.initSign(privateKey);
-
-        ByteArrayOutputStream baos = new ByteArrayOutputStream();
+        baos.reset();
         sf.write(baos);
-
         byte[] content = baos.toByteArray();
 
-        signer.update(content);
-        byte[] signature = signer.sign();
+        if (altSigner == null) {
+            Function<byte[], PKCS9Attributes> timestamper = null;
+            if (tsaUrl != null) {
+                timestamper = s -> {
+                    try {
+                        // Timestamp the signature
+                        HttpTimestamper tsa = new HttpTimestamper(tsaUrl);
+                        byte[] tsToken = PKCS7.generateTimestampToken(
+                                tsa, tSAPolicyID, tSADigestAlg, s);
 
-        @SuppressWarnings("deprecation")
-        ContentSigner signingMechanism = null;
-        if (altSigner != null) {
-            signingMechanism = loadSigningMechanism(altSigner,
-                    altSignerPath);
+                        return new PKCS9Attributes(new PKCS9Attribute[]{
+                                new PKCS9Attribute(
+                                        PKCS9Attribute.SIGNATURE_TIMESTAMP_TOKEN_OID,
+                                        tsToken)});
+                    } catch (IOException | CertificateException e) {
+                        throw new RuntimeException(e);
+                    }
+                };
+            }
+            // We now create authAttrs in block data, so "direct == false".
+            block = PKCS7.generateNewSignedData(sigalg, sigProvider, privateKey, certChain,
+                    content, internalsf, false, timestamper);
+        } else {
+            Signature signer = SignatureUtil.fromKey(sigalg, privateKey, sigProvider);
+            signer.update(content);
+            byte[] signature = signer.sign();
+
+            @SuppressWarnings("removal")
+            ContentSignerParameters params =
+                    new JarSignerParameters(null, tsaUrl, tSAPolicyID,
+                            tSADigestAlg, signature,
+                            signer.getAlgorithm(), certChain, content, zipFile);
+            @SuppressWarnings("removal")
+            ContentSigner signingMechanism = loadSigningMechanism(altSigner, altSignerPath);
+            block = signingMechanism.generateSignedData(
+                    params,
+                    !internalsf,
+                    params.getTimestampingAuthority() != null
+                            || params.getTimestampingAuthorityCertificate() != null);
         }
-
-        @SuppressWarnings("deprecation")
-        ContentSignerParameters params =
-                new JarSignerParameters(null, tsaUrl, tSAPolicyID,
-                        tSADigestAlg, signature,
-                        signer.getAlgorithm(), certChain, content, zipFile);
-        block = sf.generateBlock(params, externalSF, signingMechanism);
 
         String sfFilename = sf.getMetaName();
         String bkFilename = sf.getBlockName(privateKey);
@@ -889,6 +934,14 @@ public final class JarSigner {
             if (!ze.getName().equalsIgnoreCase(JarFile.MANIFEST_NAME)
                     && !ze.getName().equalsIgnoreCase(sfFilename)
                     && !ze.getName().equalsIgnoreCase(bkFilename)) {
+                if (ze.getName().startsWith(SignatureFile
+                        .getBaseSignatureFilesName(signerName))
+                        && SignatureFileVerifier.isBlockOrSF(ze.getName())) {
+                    if (handler != null) {
+                        handler.accept("updating", ze.getName());
+                    }
+                    continue;
+                }
                 if (handler != null) {
                     if (manifest.getAttributes(ze.getName()) != null) {
                         handler.accept("signing", ze.getName());
@@ -927,6 +980,12 @@ public final class JarSigner {
         ze2.setTime(ze.getTime());
         ze2.setComment(ze.getComment());
         ze2.setExtra(ze.getExtra());
+        int extraAttrs = JUZFA.getExtraAttributes(ze);
+        if (!extraAttrsDetected && extraAttrs != -1) {
+            extraAttrsDetected = true;
+            Event.report(Event.ReporterCategory.ZIPFILEATTRS, "detected");
+        }
+        JUZFA.setExtraAttributes(ze2, extraAttrs);
         if (ze.getMethod() == ZipEntry.STORED) {
             ze2.setSize(ze.getSize());
             ze2.setCrc(ze.getCrc());
@@ -942,11 +1001,9 @@ public final class JarSigner {
         }
     }
 
-    private boolean updateDigests(ZipEntry ze, ZipFile zf,
+    private void updateDigests(ZipEntry ze, ZipFile zf,
                                   MessageDigest[] digests,
                                   Manifest mf) throws IOException {
-        boolean update = false;
-
         Attributes attrs = mf.getAttributes(ze.getName());
         String[] base64Digests = getDigests(ze, zf, digests);
 
@@ -976,19 +1033,9 @@ public final class JarSigner {
 
             if (name == null) {
                 name = digests[i].getAlgorithm() + "-Digest";
-                attrs.putValue(name, base64Digests[i]);
-                update = true;
-            } else {
-                // compare digests, and replace the one in the manifest
-                // if they are different
-                String mfDigest = attrs.getValue(name);
-                if (!mfDigest.equalsIgnoreCase(base64Digests[i])) {
-                    attrs.putValue(name, base64Digests[i]);
-                    update = true;
-                }
             }
+            attrs.putValue(name, base64Digests[i]);
         }
-        return update;
     }
 
     private Attributes getDigestAttributes(
@@ -1051,37 +1098,18 @@ public final class JarSigner {
         return base64Digests;
     }
 
-    @SuppressWarnings("fallthrough")
-    private int findHeaderEnd(byte[] bs) {
-        // Initial state true to deal with empty header
-        boolean newline = true;     // just met a newline
-        int len = bs.length;
-        for (int i = 0; i < len; i++) {
-            switch (bs[i]) {
-                case '\r':
-                    if (i < len - 1 && bs[i + 1] == '\n') i++;
-                    // fallthrough
-                case '\n':
-                    if (newline) return i + 1;    //+1 to get length
-                    newline = true;
-                    break;
-                default:
-                    newline = false;
-            }
-        }
-        // If header end is not found, it means the MANIFEST.MF has only
-        // the main attributes section and it does not end with 2 newlines.
-        // Returns the whole length so that it can be completely replaced.
-        return len;
-    }
-
     /*
      * Try to load the specified signing mechanism.
      * The URL class loader is used.
      */
-    @SuppressWarnings("deprecation")
+    @SuppressWarnings("removal")
     private ContentSigner loadSigningMechanism(String signerClassName,
                                                String signerClassPath) {
+
+        // If there is no signerClassPath provided, search from here
+        if (signerClassPath == null) {
+            signerClassPath = ".";
+        }
 
         // construct class loader
         String cpString;   // make sure env.class.path defaults to dot
@@ -1098,10 +1126,11 @@ public final class JarSigner {
         try {
             // attempt to find signer
             Class<?> signerClass = appClassLoader.loadClass(signerClassName);
-            Object signer = signerClass.newInstance();
+            Object signer = signerClass.getDeclaredConstructor().newInstance();
             return (ContentSigner) signer;
         } catch (ClassNotFoundException|InstantiationException|
-                IllegalAccessException|ClassCastException e) {
+                IllegalAccessException|ClassCastException|
+                NoSuchMethodException| InvocationTargetException e) {
             throw new IllegalArgumentException(
                     "Invalid altSigner or altSignerPath", e);
         }
@@ -1123,7 +1152,7 @@ public final class JarSigner {
                              Manifest mf,
                              ManifestDigester md,
                              String baseName,
-                             boolean signManifest) {
+                             boolean sectionsonly) {
 
             this.baseName = baseName;
 
@@ -1136,7 +1165,7 @@ public final class JarSigner {
             mattr.putValue(Attributes.Name.SIGNATURE_VERSION.toString(), "1.0");
             mattr.putValue("Created-By", version + " (" + javaVendor + ")");
 
-            if (signManifest) {
+            if (!sectionsonly) {
                 for (MessageDigest digest: digests) {
                     mattr.putValue(digest.getAlgorithm() + "-Digest-Manifest",
                             Base64.getEncoder().encodeToString(
@@ -1145,14 +1174,12 @@ public final class JarSigner {
             }
 
             // create digest of the manifest main attributes
-            ManifestDigester.Entry mde =
-                    md.get(ManifestDigester.MF_MAIN_ATTRS, false);
+            ManifestDigester.Entry mde = md.getMainAttsEntry(false);
             if (mde != null) {
-                for (MessageDigest digest: digests) {
-                    mattr.putValue(digest.getAlgorithm() +
-                                    "-Digest-" + ManifestDigester.MF_MAIN_ATTRS,
-                            Base64.getEncoder().encodeToString(
-                                    mde.digest(digest)));
+                for (MessageDigest digest : digests) {
+                    mattr.putValue(digest.getAlgorithm() + "-Digest-" +
+                            ManifestDigester.MF_MAIN_ATTRS,
+                            Base64.getEncoder().encodeToString(mde.digest(digest)));
                 }
             } else {
                 throw new IllegalStateException
@@ -1181,37 +1208,24 @@ public final class JarSigner {
             sf.write(out);
         }
 
+        private static String getBaseSignatureFilesName(String baseName) {
+            return "META-INF/" + baseName + ".";
+        }
+
         // get .SF file name
         public String getMetaName() {
-            return "META-INF/" + baseName + ".SF";
+            return getBaseSignatureFilesName(baseName) + "SF";
         }
 
         // get .DSA (or .DSA, .EC) file name
         public String getBlockName(PrivateKey privateKey) {
-            String keyAlgorithm = privateKey.getAlgorithm();
-            return "META-INF/" + baseName + "." + keyAlgorithm;
-        }
-
-        // Generates the PKCS#7 content of block file
-        @SuppressWarnings("deprecation")
-        public byte[] generateBlock(ContentSignerParameters params,
-                                    boolean externalSF,
-                                    ContentSigner signingMechanism)
-                throws NoSuchAlgorithmException,
-                       IOException, CertificateException {
-
-            if (signingMechanism == null) {
-                signingMechanism = new TimestampedSigner();
-            }
-            return signingMechanism.generateSignedData(
-                    params,
-                    externalSF,
-                    params.getTimestampingAuthority() != null
-                        || params.getTimestampingAuthorityCertificate() != null);
+            String type = SignatureFileVerifier.getBlockExtension(privateKey);
+            return getBaseSignatureFilesName(baseName) + type;
         }
     }
 
-    @SuppressWarnings("deprecation")
+    @SuppressWarnings("removal")
+    @Deprecated(since="16", forRemoval=true)
     class JarSignerParameters implements ContentSignerParameters {
 
         private String[] args;
