@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2021, Oracle and/or its affiliates. All rights reserved.
  * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  *
  *
@@ -52,6 +52,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.function.IntSupplier;
 import java.util.function.Supplier;
@@ -59,7 +60,7 @@ import java.util.stream.Collectors;
 
 import jdk.internal.module.Checks;
 import jdk.internal.module.DefaultRoots;
-import jdk.internal.module.IllegalAccessMaps;
+import jdk.internal.module.Modules;
 import jdk.internal.module.ModuleHashes;
 import jdk.internal.module.ModuleInfo.Attributes;
 import jdk.internal.module.ModuleInfoExtender;
@@ -76,7 +77,6 @@ import jdk.internal.org.objectweb.asm.Opcodes;
 import static jdk.internal.org.objectweb.asm.Opcodes.*;
 
 import jdk.tools.jlink.internal.ModuleSorter;
-import jdk.tools.jlink.plugin.Plugin;
 import jdk.tools.jlink.plugin.PluginException;
 import jdk.tools.jlink.plugin.ResourcePool;
 import jdk.tools.jlink.plugin.ResourcePoolBuilder;
@@ -95,10 +95,7 @@ import jdk.tools.jlink.plugin.ResourcePoolEntry;
  * @see jdk.internal.module.SystemModules
  */
 
-public final class SystemModulesPlugin implements Plugin {
-    private static final String NAME = "system-modules";
-    private static final String DESCRIPTION =
-            PluginsResourceBundle.getDescription(NAME);
+public final class SystemModulesPlugin extends AbstractPlugin {
     private static final String SYSTEM_MODULES_MAP_CLASS =
             "jdk/internal/module/SystemModulesMap";
     private static final String SYSTEM_MODULES_CLASS_PREFIX =
@@ -111,17 +108,8 @@ public final class SystemModulesPlugin implements Plugin {
     private boolean enabled;
 
     public SystemModulesPlugin() {
+        super("system-modules");
         this.enabled = true;
-    }
-
-    @Override
-    public String getName() {
-        return NAME;
-    }
-
-    @Override
-    public String getDescription() {
-        return DESCRIPTION;
     }
 
     @Override
@@ -136,22 +124,17 @@ public final class SystemModulesPlugin implements Plugin {
     }
 
     @Override
-    public String getArgumentsDescription() {
-        return PluginsResourceBundle.getArgument(NAME);
-    }
-
-    @Override
     public void configure(Map<String, String> config) {
-        String arg = config.get(NAME);
+        String arg = config.get(getName());
         if (arg != null) {
-            throw new IllegalArgumentException(NAME + ": " + arg);
+            throw new IllegalArgumentException(getName() + ": " + arg);
         }
     }
 
     @Override
     public ResourcePool transform(ResourcePool in, ResourcePoolBuilder out) {
         if (!enabled) {
-            throw new PluginException(NAME + " was set");
+            throw new PluginException(getName() + " was set");
         }
 
         // validate, transform (if needed), and add the module-info.class files
@@ -290,10 +273,10 @@ public final class SystemModulesPlugin implements Plugin {
 
     /**
      * Resolves a collection of root modules, with service binding, to create
-     * configuration.
+     * a Configuration for the boot layer.
      */
     private Configuration resolve(ModuleFinder finder, Set<String> roots) {
-        return Configuration.empty().resolveAndBind(finder, ModuleFinder.of(), roots);
+        return Modules.newBootLayerConfiguration(finder, roots, null);
     }
 
     /**
@@ -307,7 +290,7 @@ public final class SystemModulesPlugin implements Plugin {
                 .collect(Collectors.toSet());
         return moduleInfos.stream()
                 .filter(mi -> names.contains(mi.moduleName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -434,12 +417,13 @@ public final class SystemModulesPlugin implements Plugin {
 
         boolean hasModulePackages() throws IOException {
             Set<String> packages = new HashSet<>();
-            ClassVisitor cv = new ClassVisitor(Opcodes.ASM6) {
+            ClassVisitor cv = new ClassVisitor(Opcodes.ASM7) {
                 @Override
                 public ModuleVisitor visitModule(String name,
                                                  int flags,
                                                  String version) {
-                    return new ModuleVisitor(Opcodes.ASM6) {
+                    return new ModuleVisitor(Opcodes.ASM7) {
+                        @Override
                         public void visitPackage(String pn) {
                             packages.add(pn);
                         }
@@ -493,7 +477,7 @@ public final class SystemModulesPlugin implements Plugin {
             return bais;
         }
 
-        class ModuleInfoRewriter extends ByteArrayOutputStream {
+        static class ModuleInfoRewriter extends ByteArrayOutputStream {
             final ModuleInfoExtender extender;
             ModuleInfoRewriter(InputStream in) {
                 this.extender = ModuleInfoExtender.newExtender(in);
@@ -637,14 +621,11 @@ public final class SystemModulesPlugin implements Plugin {
             // generate moduleReads
             genModuleReads(cw, cf);
 
-            // generate concealedPackagesToOpen and exportedPackagesToOpen
-            genXXXPackagesToOpenMethods(cw);
-
             return cw;
         }
 
         /**
-         * Generate byteccode for no-arg constructor
+         * Generate bytecode for no-arg constructor
          */
         private void genConstructor(ClassWriter cw) {
             MethodVisitor mv = cw.visitMethod(ACC_PUBLIC, "<init>", "()V", null, null);
@@ -871,16 +852,6 @@ public final class SystemModulesPlugin implements Plugin {
         }
 
         /**
-         * Generate concealedPackagesToOpen and exportedPackagesToOpen methods.
-         */
-        private void genXXXPackagesToOpenMethods(ClassWriter cw) {
-            ModuleFinder finder = finderOf(moduleInfos);
-            IllegalAccessMaps maps = IllegalAccessMaps.generate(finder);
-            generate(cw, "concealedPackagesToOpen", maps.concealedPackagesToOpen(), false);
-            generate(cw, "exportedPackagesToOpen", maps.exportedPackagesToOpen(), false);
-        }
-
-        /**
          * Generate method to return {@code Map<String, Set<String>>}.
          *
          * If {@code dedup} is true then the values are de-duplicated.
@@ -925,7 +896,7 @@ public final class SystemModulesPlugin implements Plugin {
             mv.visitTypeInsn(ANEWARRAY, "java/util/Map$Entry");
 
             int index = 0;
-            for (Map.Entry<String, Set<String>> e : map.entrySet()) {
+            for (var e : new TreeMap<>(map).entrySet()) {
                 String name = e.getKey();
                 Set<String> s = e.getValue();
 
@@ -971,7 +942,7 @@ public final class SystemModulesPlugin implements Plugin {
                 pushInt(mv, size);
                 mv.visitTypeInsn(ANEWARRAY, "java/lang/String");
                 int i = 0;
-                for (String element : set) {
+                for (String element : sorted(set)) {
                     mv.visitInsn(DUP);
                     pushInt(mv, i);
                     mv.visitLdcInsn(element);
@@ -985,7 +956,7 @@ public final class SystemModulesPlugin implements Plugin {
                         true);
             } else {
                 StringBuilder sb = new StringBuilder("(");
-                for (String element : set) {
+                for (String element : sorted(set)) {
                     mv.visitLdcInsn(element);
                     sb.append("Ljava/lang/Object;");
                 }
@@ -1146,7 +1117,7 @@ public final class SystemModulesPlugin implements Plugin {
                 pushInt(mv, requires.size());
                 mv.visitTypeInsn(ANEWARRAY, "java/lang/module/ModuleDescriptor$Requires");
                 int arrayIndex = 0;
-                for (Requires require : requires) {
+                for (Requires require : sorted(requires)) {
                     String compiledVersion = null;
                     if (require.compiledVersion().isPresent()) {
                         compiledVersion = require.compiledVersion().get().toString();
@@ -1192,7 +1163,7 @@ public final class SystemModulesPlugin implements Plugin {
                 pushInt(mv, exports.size());
                 mv.visitTypeInsn(ANEWARRAY, "java/lang/module/ModuleDescriptor$Exports");
                 int arrayIndex = 0;
-                for (Exports export : exports) {
+                for (Exports export : sorted(exports)) {
                     mv.visitInsn(DUP);    // arrayref
                     pushInt(mv, arrayIndex++);
                     newExports(export.modifiers(), export.source(), export.targets());
@@ -1245,7 +1216,7 @@ public final class SystemModulesPlugin implements Plugin {
                 pushInt(mv, opens.size());
                 mv.visitTypeInsn(ANEWARRAY, "java/lang/module/ModuleDescriptor$Opens");
                 int arrayIndex = 0;
-                for (Opens open : opens) {
+                for (Opens open : sorted(opens)) {
                     mv.visitInsn(DUP);    // arrayref
                     pushInt(mv, arrayIndex++);
                     newOpens(open.modifiers(), open.source(), open.targets());
@@ -1310,7 +1281,7 @@ public final class SystemModulesPlugin implements Plugin {
                 pushInt(mv, provides.size());
                 mv.visitTypeInsn(ANEWARRAY, "java/lang/module/ModuleDescriptor$Provides");
                 int arrayIndex = 0;
-                for (Provides provide : provides) {
+                for (Provides provide : sorted(provides)) {
                     mv.visitInsn(DUP);    // arrayref
                     pushInt(mv, arrayIndex++);
                     newProvides(provide.service(), provide.providers());
@@ -1420,6 +1391,8 @@ public final class SystemModulesPlugin implements Plugin {
                 // Invoke ModuleHashes.Builder::hashForModule
                 recordedHashes
                     .names()
+                    .stream()
+                    .sorted()
                     .forEach(mn -> hashForModule(mn, recordedHashes.hashFor(mn)));
 
                 // Put ModuleHashes into the hashes array
@@ -1600,7 +1573,7 @@ public final class SystemModulesPlugin implements Plugin {
          * it will reuse defaultVarIndex.  For a Set with multiple references,
          * it will use a new local variable retrieved from the nextLocalVar
          */
-        class SetBuilder<T> {
+        class SetBuilder<T extends Comparable<T>> {
             private final Set<T> elements;
             private final int defaultVarIndex;
             private final IntSupplier nextLocalVar;
@@ -1660,7 +1633,7 @@ public final class SystemModulesPlugin implements Plugin {
                 if (elements.size() <= 10) {
                     // call Set.of(e1, e2, ...)
                     StringBuilder sb = new StringBuilder("(");
-                    for (T t : elements) {
+                    for (T t : sorted(elements)) {
                         sb.append("Ljava/lang/Object;");
                         visitElement(t, mv);
                     }
@@ -1672,7 +1645,7 @@ public final class SystemModulesPlugin implements Plugin {
                     pushInt(mv, elements.size());
                     mv.visitTypeInsn(ANEWARRAY, "java/lang/String");
                     int arrayIndex = 0;
-                    for (T t : elements) {
+                    for (T t : sorted(elements)) {
                         mv.visitInsn(DUP);    // arrayref
                         pushInt(mv, arrayIndex);
                         visitElement(t, mv);  // value
@@ -1690,7 +1663,7 @@ public final class SystemModulesPlugin implements Plugin {
          * Generates bytecode to create one single instance of EnumSet
          * for a given set of modifiers and assign to a local variable slot.
          */
-        class EnumSetBuilder<T> extends SetBuilder<T> {
+        class EnumSetBuilder<T extends Comparable<T>> extends SetBuilder<T> {
 
             private final String className;
 
@@ -1704,6 +1677,7 @@ public final class SystemModulesPlugin implements Plugin {
             /**
              * Loads an Enum field.
              */
+            @Override
             void visitElement(T t, MethodVisitor mv) {
                 mv.visitFieldInsn(GETSTATIC, className, t.toString(),
                                   "L" + className + ";");
@@ -1788,7 +1762,7 @@ public final class SystemModulesPlugin implements Plugin {
         mv.visitTypeInsn(ANEWARRAY, "java/lang/String");
 
         int index = 0;
-        for (String moduleName : map.keySet()) {
+        for (String moduleName : sorted(map.keySet())) {
             mv.visitInsn(DUP);                  // arrayref
             pushInt(mv, index);
             mv.visitLdcInsn(moduleName);
@@ -1811,7 +1785,7 @@ public final class SystemModulesPlugin implements Plugin {
         mv.visitTypeInsn(ANEWARRAY, "java/lang/String");
 
         index = 0;
-        for (String className : map.values()) {
+        for (String className : sorted(map.values())) {
             mv.visitInsn(DUP);                  // arrayref
             pushInt(mv, index);
             mv.visitLdcInsn(className.replace('/', '.'));
@@ -1829,6 +1803,19 @@ public final class SystemModulesPlugin implements Plugin {
         out.add(e);
 
         return rn;
+    }
+
+    /**
+     * Returns a sorted copy of a collection.
+     *
+     * This is useful to ensure a deterministic iteration order.
+     *
+     * @return a sorted copy of the given collection.
+     */
+    private static <T extends Comparable<T>> List<T> sorted(Collection<T> c) {
+        var l = new ArrayList<T>(c);
+        Collections.sort(l);
+        return l;
     }
 
     /**
