@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2020, Oracle and/or its affiliates. All rights reserved.
  * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  *
  *
@@ -41,7 +41,6 @@ import java.lang.module.ModuleDescriptor;
 import java.lang.module.ModuleFinder;
 import java.lang.module.ModuleReference;
 import java.net.MalformedURLException;
-import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.Charset;
@@ -110,19 +109,18 @@ import java.util.Spliterators;
 import java.util.function.Function;
 import java.util.function.Supplier;
 import jdk.internal.joptsimple.*;
-import jdk.internal.jshell.tool.Feedback.FormatAction;
-import jdk.internal.jshell.tool.Feedback.FormatCase;
-import jdk.internal.jshell.tool.Feedback.FormatErrors;
-import jdk.internal.jshell.tool.Feedback.FormatResolve;
-import jdk.internal.jshell.tool.Feedback.FormatUnresolved;
-import jdk.internal.jshell.tool.Feedback.FormatWhen;
+import jdk.internal.jshell.tool.Selector.FormatAction;
+import jdk.internal.jshell.tool.Selector.FormatCase;
+import jdk.internal.jshell.tool.Selector.FormatErrors;
+import jdk.internal.jshell.tool.Selector.FormatResolve;
+import jdk.internal.jshell.tool.Selector.FormatUnresolved;
+import jdk.internal.jshell.tool.Selector.FormatWhen;
 import jdk.internal.editor.spi.BuildInEditorProvider;
 import jdk.internal.editor.external.ExternalEditor;
 import static java.util.Arrays.asList;
 import static java.util.Arrays.stream;
 import static java.util.Collections.singletonList;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 import static jdk.jshell.Snippet.SubKind.TEMP_VAR_EXPRESSION_SUBKIND;
 import static jdk.jshell.Snippet.SubKind.VAR_VALUE_SUBKIND;
 import static java.util.stream.Collectors.toMap;
@@ -140,6 +138,8 @@ import static jdk.internal.jshell.tool.ContinuousCompletionProvider.STARTSWITH_M
  */
 public class JShellTool implements MessageHandler {
 
+    private static String PROMPT = "\u0005";
+    private static String CONTINUATION_PROMPT = "\u0006";
     private static final Pattern LINEBREAK = Pattern.compile("\\R");
     private static final Pattern ID = Pattern.compile("[se]?\\d+([-\\s].*)?");
     private static final Pattern RERUN_ID = Pattern.compile("/" + ID.pattern());
@@ -160,6 +160,7 @@ public class JShellTool implements MessageHandler {
     final PersistentStorage prefs;
     final Map<String, String> envvars;
     final Locale locale;
+    final boolean interactiveTerminal;
 
     final Feedback feedback = new Feedback();
 
@@ -179,7 +180,8 @@ public class JShellTool implements MessageHandler {
     JShellTool(InputStream cmdin, PrintStream cmdout, PrintStream cmderr,
             PrintStream console,
             InputStream userin, PrintStream userout, PrintStream usererr,
-            PersistentStorage prefs, Map<String, String> envvars, Locale locale) {
+            PersistentStorage prefs, Map<String, String> envvars, Locale locale,
+            boolean interactiveTerminal) {
         this.cmdin = cmdin;
         this.cmdout = cmdout;
         this.cmderr = cmderr;
@@ -195,6 +197,7 @@ public class JShellTool implements MessageHandler {
         this.prefs = prefs;
         this.envvars = envvars;
         this.locale = locale;
+        this.interactiveTerminal = interactiveTerminal;
     }
 
     private ResourceBundle versionRB = null;
@@ -230,15 +233,18 @@ public class JShellTool implements MessageHandler {
 
     static final String STARTUP_KEY  = "STARTUP";
     static final String EDITOR_KEY   = "EDITOR";
-    static final String FEEDBACK_KEY = "FEEDBACK";
     static final String MODE_KEY     = "MODE";
+    static final String MODE2_KEY     = "MODE2";
+    static final String FEEDBACK_KEY = "FEEDBACK";
     static final String REPLAY_RESTORE_KEY = "REPLAY_RESTORE";
+    public static final String INDENT_KEY   = "INDENT";
 
     static final Pattern BUILTIN_FILE_PATTERN = Pattern.compile("\\w+");
     static final String BUILTIN_FILE_PATH_FORMAT = "/jdk/jshell/tool/resources/%s.jsh";
     static final String INT_PREFIX = "int $$exit$$ = ";
 
     static final int OUTPUT_WIDTH = 72;
+    static final int DEFAULT_INDENT = 4;
 
     // match anything followed by whitespace
     private static final Pattern OPTION_PRE_PATTERN =
@@ -248,7 +254,7 @@ public class JShellTool implements MessageHandler {
             Pattern.compile(OPTION_PRE_PATTERN.pattern() + "(?<dd>-??)(?<flag>-([a-z][a-z\\-]*)?)");
     // match an option flag and a (possibly missing or incomplete) value
     private static final Pattern OPTION_VALUE_PATTERN =
-            Pattern.compile(OPTION_PATTERN.pattern() + "\\s+(?<val>\\S*)");
+            Pattern.compile(OPTION_PATTERN.pattern() + "\\s+(?<val>(\\S|\\\\ )*)");
 
     // Tool id (tid) mapping: the three name spaces
     NameSpace mainNamespace;
@@ -268,6 +274,7 @@ public class JShellTool implements MessageHandler {
         ADD_EXPORTS("--add-exports", false),
         ENABLE_PREVIEW("--enable-preview", true),
         SOURCE_RELEASE("-source", true, true, true, false, false),  // virtual option, generated by --enable-preview
+        ENABLE_NATIVE_ACCESS("--enable-native-access", true, true, false, true, true),
         TO_COMPILER("-C", false, false, true, false, false),
         TO_REMOTE_VM("-R", false, false, false, true, false),;
         final String optionFlag;
@@ -357,6 +364,7 @@ public class JShellTool implements MessageHandler {
         private final OptionSpec<String> argAddModules = parser.accepts("add-modules").withRequiredArg();
         private final OptionSpec<String> argAddExports = parser.accepts("add-exports").withRequiredArg();
         private final OptionSpecBuilder  argEnablePreview = parser.accepts("enable-preview");
+        private final OptionSpecBuilder  argEnableNativeAccess = parser.accepts("enable-native-access");
         private final NonOptionArgumentSpec<String> argNonOptions = parser.nonOptions();
 
         private Options opts = new Options();
@@ -405,7 +413,7 @@ public class JShellTool implements MessageHandler {
             if (failed) {
                 return Collections.emptyList();
             } else {
-                return result.collect(toList());
+                return result.toList();
             }
         }
 
@@ -456,7 +464,7 @@ public class JShellTool implements MessageHandler {
             addOptions(OptionKind.ADD_MODULES, options.valuesOf(argAddModules));
             addOptions(OptionKind.ADD_EXPORTS, options.valuesOf(argAddExports).stream()
                     .map(mp -> mp.contains("=") ? mp : mp + "=ALL-UNNAMED")
-                    .collect(toList())
+                    .toList()
             );
             if (options.has(argEnablePreview)) {
                 opts.addAll(OptionKind.ENABLE_PREVIEW, List.of(
@@ -464,6 +472,10 @@ public class JShellTool implements MessageHandler {
                 opts.addAll(OptionKind.SOURCE_RELEASE, List.of(
                         OptionKind.SOURCE_RELEASE.optionFlag,
                         System.getProperty("java.specification.version")));
+            }
+            if (options.has(argEnableNativeAccess)) {
+                opts.addAll(OptionKind.ENABLE_NATIVE_ACCESS, List.of(
+                        OptionKind.ENABLE_NATIVE_ACCESS.optionFlag, "ALL-UNNAMED"));
             }
 
             if (failed) {
@@ -484,7 +496,7 @@ public class JShellTool implements MessageHandler {
                 if (kind.passFlag) {
                     vals = vals.stream()
                             .flatMap(mp -> Stream.of(kind.optionFlag, mp))
-                            .collect(toList());
+                            .toList();
                 }
                 opts.addAll(kind, vals);
             }
@@ -864,7 +876,7 @@ public class JShellTool implements MessageHandler {
      */
     @Override
     public void errormsg(String key, Object... args) {
-        error(messageFormat(key, args));
+        error("%s", messageFormat(key, args));
     }
 
     /**
@@ -908,6 +920,12 @@ public class JShellTool implements MessageHandler {
         } else {
             return s;
         }
+    }
+
+    private String indent() {
+        String indentValue = prefs.get(INDENT_KEY);
+        if (indentValue == null) indentValue = Integer.toString(DEFAULT_INDENT);
+        return indentValue;
     }
 
     /**
@@ -967,7 +985,15 @@ public class JShellTool implements MessageHandler {
             };
             Runtime.getRuntime().addShutdownHook(shutdownHook);
             // execute from user input
-            try (IOContext in = new ConsoleIOContext(this, cmdin, console)) {
+            try (IOContext in = new ConsoleIOContext(this, cmdin, console, interactiveTerminal)) {
+                int indent;
+                try {
+                    String indentValue = indent();
+                    indent = Integer.parseInt(indentValue);
+                } catch (NumberFormatException ex) {
+                    indent = DEFAULT_INDENT;
+                }
+                in.setIndent(indent);
                 while (regenerateOnDeath) {
                     if (!live) {
                         resetState();
@@ -1114,11 +1140,20 @@ public class JShellTool implements MessageHandler {
         // These predefined modes are read-only
         feedback.markModesReadOnly();
         // Restore user defined modes retained on previous run with /set mode -retain
-        String encoded = prefs.get(MODE_KEY);
+        boolean oldModes = false;
+        String encoded = prefs.get(MODE2_KEY);
+        if (encoded == null || encoded.isEmpty()) {
+            // No new layout modes, see if there are old (JDK-14 and before) modes
+            oldModes = true;
+            encoded = prefs.get(MODE_KEY);
+        }
         if (encoded != null && !encoded.isEmpty()) {
             if (!feedback.restoreEncodedModes(initmh, encoded)) {
                 // Catastrophic corruption -- remove the retained modes
-                prefs.remove(MODE_KEY);
+                // Leave old mode corruption clean-up to old versions
+                if (!oldModes) {
+                    prefs.remove(MODE2_KEY);
+                }
             }
         }
         if (initMode != null) {
@@ -1140,7 +1175,11 @@ public class JShellTool implements MessageHandler {
     //where
     private void startUpRun(String start) {
         try (IOContext suin = new ScannerIOContext(new StringReader(start))) {
-            run(suin);
+            while (run(suin)) {
+                if (!live) {
+                    resetState();
+                }
+            }
         } catch (Exception ex) {
             errormsg("jshell.err.startup.unexpected.exception", ex);
             ex.printStackTrace(cmderr);
@@ -1162,8 +1201,10 @@ public class JShellTool implements MessageHandler {
      * Main loop
      *
      * @param in the line input/editing context
+     * @return true iff something remains in the input after this method finishes
+     *              (e.g. due to live == false).
      */
-    private void run(IOContext in) {
+    private boolean run(IOContext in) {
         IOContext oldInput = input;
         input = in;
         try {
@@ -1177,11 +1218,13 @@ public class JShellTool implements MessageHandler {
             }
         } catch (EOFException ex) {
             // Just exit loop
+            return false;
         } catch (IOException ex) {
             errormsg("jshell.err.unexpected.exception", ex);
         } finally {
             input = oldInput;
         }
+        return true;
     }
 
     /**
@@ -1220,45 +1263,22 @@ public class JShellTool implements MessageHandler {
     private String getInput(String initial) throws IOException{
         String src = initial;
         while (live) { // loop while incomplete (and live)
-            if (!src.isEmpty()) {
-                // We have some source, see if it is complete, if so, use it
-                String check;
-
-                if (isCommand(src)) {
-                    // A command can only be incomplete if it is a /exit with
-                    // an argument
-                    int sp = src.indexOf(" ");
-                    if (sp < 0) return src;
-                    check = src.substring(sp).trim();
-                    if (check.isEmpty()) return src;
-                    String cmd = src.substring(0, sp);
-                    Command[] match = findCommand(cmd, c -> c.kind.isRealCommand);
-                    if (match.length != 1 || !match[0].command.equals("/exit")) {
-                        // A command with no snippet arg, so no multi-line input
-                        return src;
-                    }
-                } else {
-                    // For a snippet check the whole source
-                    check = src;
-                }
-                Completeness comp = analysis.analyzeCompletion(check).completeness();
-                if (comp.isComplete() || comp == Completeness.EMPTY) {
-                    return src;
-                }
+            if (!src.isEmpty() && isComplete(src)) {
+                return src;
             }
-            String prompt = interactive()
-                    ? testPrompt
-                            ? src.isEmpty()
-                                    ? "\u0005" //ENQ -- test prompt
-                                    : "\u0006" //ACK -- test continuation prompt
-                            : src.isEmpty()
-                                    ? feedback.getPrompt(currentNameSpace.tidNext())
-                                    : feedback.getContinuationPrompt(currentNameSpace.tidNext())
+            String firstLinePrompt = interactive()
+                    ? testPrompt ? PROMPT
+                                 : feedback.getPrompt(currentNameSpace.tidNext())
+                    : "" // Non-interactive -- no prompt
+                    ;
+            String continuationPrompt = interactive()
+                    ? testPrompt ? CONTINUATION_PROMPT
+                                 : feedback.getContinuationPrompt(currentNameSpace.tidNext())
                     : "" // Non-interactive -- no prompt
                     ;
             String line;
             try {
-                line = input.readLine(prompt, src);
+                line = input.readLine(firstLinePrompt, continuationPrompt, src.isEmpty(), src);
             } catch (InputInterruptedException ex) {
                 //input interrupted - clearing current state
                 src = "";
@@ -1277,6 +1297,33 @@ public class JShellTool implements MessageHandler {
                     : src + "\n" + line;
         }
         throw new EOFException(); // not longer live
+    }
+
+    public boolean isComplete(String src) {
+        String check;
+
+        if (isCommand(src)) {
+            // A command can only be incomplete if it is a /exit with
+            // an argument
+            int sp = src.indexOf(" ");
+            if (sp < 0) return true;
+            check = src.substring(sp).trim();
+            if (check.isEmpty()) return true;
+            String cmd = src.substring(0, sp);
+            Command[] match = findCommand(cmd, c -> c.kind.isRealCommand);
+            if (match.length != 1 || !match[0].command.equals("/exit")) {
+                // A command with no snippet arg, so no multi-line input
+                return true;
+            }
+        } else {
+            // For a snippet check the whole source
+            check = src;
+        }
+        Completeness comp = analysis.analyzeCompletion(check).completeness();
+        if (comp.isComplete() || comp == Completeness.EMPTY) {
+            return true;
+        }
+        return false;
     }
 
     private boolean isCommand(String line) {
@@ -1514,13 +1561,13 @@ public class JShellTool implements MessageHandler {
     private static CompletionProvider fileCompletions(Predicate<Path> accept) {
         return (code, cursor, anchor) -> {
             int lastSlash = code.lastIndexOf('/');
-            String path = code.substring(0, lastSlash + 1);
-            String prefix = lastSlash != (-1) ? code.substring(lastSlash + 1) : code;
+            String path = code.substring(0, lastSlash + 1).replace("\\ ", " ");
+            String prefix = (lastSlash != (-1) ? code.substring(lastSlash + 1) : code).replace("\\ ", " ");
             Path current = toPathResolvingUserHome(path);
             List<Suggestion> result = new ArrayList<>();
             try (Stream<Path> dir = Files.list(current)) {
                 dir.filter(f -> accept.test(f) && f.getFileName().toString().startsWith(prefix))
-                   .map(f -> new ArgSuggestion(f.getFileName() + (Files.isDirectory(f) ? "/" : "")))
+                   .map(f -> new ArgSuggestion(f.getFileName().toString().replace(" ", "\\ ") + (Files.isDirectory(f) ? "/" : "")))
                    .forEach(result::add);
             } catch (IOException ex) {
                 //ignore...
@@ -1561,8 +1608,8 @@ public class JShellTool implements MessageHandler {
                                 ? Stream.of(String.valueOf(k.id()) + " ", ((DeclarationSnippet) k).name() + " ")
                                 : Stream.of(String.valueOf(k.id()) + " "))
                         .filter(k -> k.startsWith(argPrefix))
-                        .map(ArgSuggestion::new)
-                        .collect(Collectors.toList());
+                        .<Suggestion>map(ArgSuggestion::new)
+                        .toList();
         };
     }
 
@@ -1630,8 +1677,8 @@ public class JShellTool implements MessageHandler {
                 String flag = ovm.group("flag");
                 List<CompletionProvider> ps = ARG_OPTIONS.entrySet().stream()
                         .filter(es -> es.getKey().startsWith(flag))
-                        .map(es -> es.getValue())
-                        .collect(toList());
+                        .map(Map.Entry::getValue)
+                        .toList();
                 if (ps.size() == 1) {
                     int pastSpace = ovm.start("val");
                     List<Suggestion> result = ps.get(0).completionSuggestions(
@@ -1647,7 +1694,7 @@ public class JShellTool implements MessageHandler {
                         om.group("flag"), cursor - pastSpace, anchor);
                 if (!om.group("dd").isEmpty()) {
                     result = result.stream()
-                            .map(sug -> new Suggestion() {
+                            .<Suggestion>map(sug -> new Suggestion() {
                                 @Override
                                 public String continuation() {
                                     return "-" + sug.continuation();
@@ -1658,7 +1705,7 @@ public class JShellTool implements MessageHandler {
                                     return false;
                                 }
                             })
-                            .collect(toList());
+                            .toList();
                     --pastSpace;
                 }
                 anchor[0] += pastSpace;
@@ -1826,7 +1873,8 @@ public class JShellTool implements MessageHandler {
                                 SET_MODE_OPTIONS_COMPLETION_PROVIDER)),
                         "prompt", feedback.modeCompletions(),
                         "editor", fileCompletions(Files::isExecutable),
-                        "start", FILE_COMPLETION_PROVIDER),
+                        "start", FILE_COMPLETION_PROVIDER,
+                        "indent", EMPTY_COMPLETION_PROVIDER),
                         STARTSWITH_MATCHER)));
         registerCommand(new Command("/?",
                 "help.quest",
@@ -1852,6 +1900,9 @@ public class JShellTool implements MessageHandler {
                 CommandKind.HELP_ONLY));
         registerCommand(new Command("intro",
                 "help.intro",
+                CommandKind.HELP_SUBJECT));
+        registerCommand(new Command("keys",
+                "help.keys",
                 CommandKind.HELP_SUBJECT));
         registerCommand(new Command("id",
                 "help.id",
@@ -1887,7 +1938,7 @@ public class JShellTool implements MessageHandler {
         String prefix = space != (-1) ? stripped.substring(0, space) : stripped;
         List<String> result = new ArrayList<>();
 
-        List<Entry<String, String>> toShow;
+        List<? extends Entry<String, String>> toShow;
 
         if (SET_SUB.matcher(stripped).matches()) {
             String setSubcommand = stripped.replaceFirst("/?set ([^ ]*)($| .*)", "$1");
@@ -1895,7 +1946,7 @@ public class JShellTool implements MessageHandler {
                 Arrays.stream(SET_SUBCOMMANDS)
                        .filter(s -> s.startsWith(setSubcommand))
                         .map(s -> new SimpleEntry<>("/set " + s, "help.set." + s))
-                        .collect(toList());
+                        .toList();
         } else if (RERUN_ID.matcher(stripped).matches()) {
             toShow =
                 singletonList(new SimpleEntry<>("/<id>", "help.rerun"));
@@ -1912,7 +1963,7 @@ public class JShellTool implements MessageHandler {
                                   || (inHelp && c.kind == CommandKind.HELP_SUBJECT))
                         .sorted((c1, c2) -> c1.command.compareTo(c2.command))
                         .map(c -> new SimpleEntry<>(c.command, c.helpKey))
-                        .collect(toList());
+                        .toList();
         }
 
         if (toShow.size() == 1 && !inHelp) {
@@ -1934,7 +1985,7 @@ public class JShellTool implements MessageHandler {
     // --- Command implementations ---
 
     private static final String[] SET_SUBCOMMANDS = new String[]{
-        "format", "truncation", "feedback", "mode", "prompt", "editor", "start"};
+        "format", "truncation", "feedback", "mode", "prompt", "editor", "start", "indent"};
 
     final boolean cmdSet(String arg) {
         String cmd = "/set";
@@ -1951,6 +2002,7 @@ public class JShellTool implements MessageHandler {
             case "_blank": {
                 // show top-level settings
                 new SetEditor().set();
+                showIndent();
                 showSetStart();
                 setFeedback(this, at); // no args so shows feedback setting
                 hardmsg("jshell.msg.set.show.mode.settings");
@@ -1964,13 +2016,30 @@ public class JShellTool implements MessageHandler {
                 return setFeedback(this, at);
             case "mode":
                 return feedback.setMode(this, at,
-                        retained -> prefs.put(MODE_KEY, retained));
+                        retained -> prefs.put(MODE2_KEY, retained));
             case "prompt":
                 return feedback.setPrompt(this, at);
             case "editor":
                 return new SetEditor(at).set();
             case "start":
                 return setStart(at);
+            case "indent":
+                String value = at.next();
+                if (value != null) {
+                    try {
+                        int indent = Integer.parseInt(value);
+                        String indentValue = Integer.toString(indent);
+                        prefs.put(INDENT_KEY, indentValue);
+                        input.setIndent(indent);
+                        fluffmsg("jshell.msg.set.indent.set", indentValue);
+                    } catch (NumberFormatException ex) {
+                        errormsg("jshell.err.invalid.indent", value);
+                        return false;
+                    }
+                } else {
+                    showIndent();
+                }
+                return true;
             default:
                 errormsg("jshell.err.arg", cmd, at.val());
                 return false;
@@ -2245,6 +2314,10 @@ public class JShellTool implements MessageHandler {
         hard(sb.toString());
     }
 
+    private void showIndent() {
+        hard("/set indent %s", indent());
+    }
+
     boolean cmdDebug(String arg) {
         if (arg.isEmpty()) {
             debug = !debug;
@@ -2312,7 +2385,7 @@ public class JShellTool implements MessageHandler {
                     Snippet sn = e.snippet();
 
                     // Show any diagnostics
-                    List<Diag> diagnostics = state.diagnostics(sn).collect(toList());
+                    List<Diag> diagnostics = state.diagnostics(sn).toList();
                     String source = sn.source();
                     displayDiagnostics(source, diagnostics);
 
@@ -2714,7 +2787,7 @@ public class JShellTool implements MessageHandler {
             if (allIds == null) {
                 allSnippets = snippetSupplier.get()
                         .sorted((a, b) -> order(a) - order(b))
-                        .collect(toList());
+                        .toList();
                 allIds = allSnippets.stream()
                         .map(sn -> sn.id())
                         .toArray(n -> new String[n]);
@@ -2740,14 +2813,11 @@ public class JShellTool implements MessageHandler {
          */
         int order(String id) {
             try {
-                switch (id.charAt(0)) {
-                    case 's':
-                        return Integer.parseInt(id.substring(1));
-                    case 'e':
-                        return 0x40000000 + Integer.parseInt(id.substring(1));
-                    default:
-                        return 0x20000000 + Integer.parseInt(id);
-                }
+                return switch (id.charAt(0)) {
+                    case 's' -> Integer.parseInt(id.substring(1));
+                    case 'e' -> 0x40000000 + Integer.parseInt(id.substring(1));
+                    default -> 0x20000000 + Integer.parseInt(id);
+                };
             } catch (Exception ex) {
                 return 0x60000000;
             }
@@ -2936,7 +3006,7 @@ public class JShellTool implements MessageHandler {
                         }
                         String tsrc = trimNewlines(an.source());
                         if (!failed && !currSrcs.contains(tsrc)) {
-                            failed = processSource(tsrc);
+                            failed = !processSource(tsrc);
                         }
                         nextSrcs.add(tsrc);
                         if (an.remaining().isEmpty()) {
@@ -3317,6 +3387,9 @@ public class JShellTool implements MessageHandler {
                 case ANNOTATION_TYPE_SUBKIND:
                     kind = "@interface";
                     break;
+                case RECORD_SUBKIND:
+                    kind = "record";
+                    break;
                 default:
                     assert false : "Wrong kind" + ck.subKind();
                     kind = "class";
@@ -3336,7 +3409,7 @@ public class JShellTool implements MessageHandler {
     }
 
     private boolean cmdUseHistoryEntry(int index) {
-        List<Snippet> keys = state.snippets().collect(toList());
+        List<Snippet> keys = state.snippets().toList();
         if (index < 0)
             index += keys.size();
         else
@@ -3397,7 +3470,7 @@ public class JShellTool implements MessageHandler {
     List<Diag> errorsOnly(List<Diag> diagnostics) {
         return diagnostics.stream()
                 .filter(Diag::isError)
-                .collect(toList());
+                .toList();
     }
 
     /**
@@ -3492,6 +3565,10 @@ public class JShellTool implements MessageHandler {
 
         int pstart = (int) diag.getStartPosition();
         int pend = (int) diag.getEndPosition();
+        if (pstart < 0 || pend < 0) {
+            pstart = 0;
+            pend = source.length();
+        }
         Matcher m = LINEBREAK.matcher(source);
         int pstartl = 0;
         int pendl = -2;
@@ -3503,7 +3580,7 @@ public class JShellTool implements MessageHandler {
                 pstartl = m.end();
             }
         }
-        if (pendl < pstart) {
+        if (pendl < pstartl) {
             pendl = source.length();
         }
         toDisplay.add(source.substring(pstartl, pendl));
@@ -3571,7 +3648,7 @@ public class JShellTool implements MessageHandler {
             debug("Event with null key: %s", ste);
             return false;
         }
-        List<Diag> diagnostics = state.diagnostics(sn).collect(toList());
+        List<Diag> diagnostics = state.diagnostics(sn).toList();
         String source = sn.source();
         if (ste.causeSnippet() == null) {
             // main event
@@ -3680,7 +3757,7 @@ public class JShellTool implements MessageHandler {
     }
 
     void printSnippetStatus(DeclarationSnippet sn, boolean resolve) {
-        List<Diag> otherErrors = errorsOnly(state.diagnostics(sn).collect(toList()));
+        List<Diag> otherErrors = errorsOnly(state.diagnostics(sn).toList());
         new DisplayEvent(sn, state.status(sn), resolve, otherErrors)
                 .displayDeclarationAndValue();
     }
@@ -3749,7 +3826,7 @@ public class JShellTool implements MessageHandler {
         }
 
         private String unresolved(DeclarationSnippet key) {
-            List<String> unr = state.unresolvedDependencies(key).collect(toList());
+            List<String> unr = state.unresolvedDependencies(key).toList();
             StringBuilder sb = new StringBuilder();
             int fromLast = unr.size();
             if (fromLast > 0) {
@@ -3807,6 +3884,9 @@ public class JShellTool implements MessageHandler {
                     break;
                 case ANNOTATION_TYPE_SUBKIND:
                     custom(FormatCase.ANNOTATION, ((TypeDeclSnippet) sn).name());
+                    break;
+                case RECORD_SUBKIND:
+                    custom(FormatCase.RECORD, ((TypeDeclSnippet) sn).name());
                     break;
                 case METHOD_SUBKIND:
                     custom(FormatCase.METHOD, ((MethodSnippet) sn).name(), ((MethodSnippet) sn).parameterTypes());
@@ -4001,7 +4081,7 @@ class ScannerIOContext extends NonInteractiveIOContext {
     }
 
     @Override
-    public String readLine(String prompt, String prefix) {
+    public String readLine(String firstLinePrompt, String continuationPrompt, boolean firstLine, String prefix) {
         if (scannerIn.hasNextLine()) {
             return scannerIn.nextLine();
         } else {
@@ -4030,7 +4110,7 @@ class ReloadIOContext extends NonInteractiveIOContext {
     }
 
     @Override
-    public String readLine(String prompt, String prefix) {
+    public String readLine(String firstLinePrompt, String continuationPrompt, boolean firstLine, String prefix) {
         String s = it.hasNext()
                 ? it.next()
                 : null;
